--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Code Kata</title>
   </head>
   <body>
-    <h1>EVERYDAY | Code Kata 👊</h1>
+    <h1>EVERYDAY | Code Kata 🥷</h1>
 
     <script src="js/index.js"></script>
   </body>
