--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>EVERYDAY | Code Kata 🥷</h1>
 
-    <script src="js/index.js"></script>
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
